Restructured the docs.  Mouse input is fully working now.